--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 
-    <title>React Transform Boilerplate</title>
+    <title>ChatApp</title>
   </head>
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
